header fix on mobile

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -48,3 +48,10 @@
     margin: 0px 46px;
   }
 }
+
+
+@media only screen and (max-width: 756px) {
+.header{
+  display:none;
+}
+}
